--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,10 +108,8 @@
       
         <h1>Introducing Wanda</h1>
         <h2>
-          Our online study room is freely available to help your motivation and
-          make progress with your work. <br />
-          Some describe the experience as akin to being in a library; a silent
-          space to work alongside others.
+          Wanda is popularly interpreted as "wanderer". <br>
+          We aim to provide a platform to guide you to the right path in this journey of Computer Science. 
         </h2>
       
         <a href="/register" class="btn-get-started scrollto">Get Started</a>
@@ -126,8 +124,8 @@
         <div class="container">
           <div class="row content">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-              <h2>Why a Study Room?</h2>
-              <h3>Seek collective motivation across time zones</h3>
+              <h2>Why Wanda Vision?</h2>
+              <h3>Life could be perfect when it's made just for you!</h3>
             </div>
             <div
               class="col-lg-6 pt-4 pt-lg-0"
@@ -143,13 +141,14 @@
                 only to progress our work but know we can do so while our simple
                 presence supports others. We are not alone.
               </p>
+
+              <h5>What we offer?</h5>
               <ul>
-                <li><i class="ri-check-double-line"></i> Tackle Lonliness</li>
+                <li><i class="ri-check-double-line"></i> The Scarlett Witch (The Study Room)</li>
                 <li>
-                  <i class="ri-check-double-line"></i> Get Support and
-                  Encouragement
+                  <i class="ri-check-double-line"></i> Nexus (The Resourceful Potions)
                 </li>
-                <li><i class="ri-check-double-line"></i> Make New Friends</li>
+                <li><i class="ri-check-double-line"></i>Vision (The AI-powered Bot)</li>
               </ul>
               <p class="font-italic">
                 What is certain, is that one small action in the world has a
@@ -161,6 +160,75 @@
         </div>
       </section>
       <!-- End About Section -->
+
+      <!-- ======= Why Us Section ======= -->
+      <section id="why-us" class="why-us">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-lg-4 d-flex align-items-stretch"
+              data-aos="fade-right"
+            >
+              <div class="content">
+                <h3>The Scarlett Witch</h3>
+                <p>
+                  Effective study groups can help students learn course material in a deeper, more concrete way. 
+                  Groups that are effective generate positive energy, encourage active participation, instill discipline, and require commitments from members. 
+                  These skills are certainly important for learning. Just like connecting the Marvel Universe, 
+                  Scarlett Witch will help you connect with the right people and make your study efficient.
+                </p>
+                <!-- <div class="text-center">
+                  <a href="/signUp" class="more-btn"
+                    >Sign Up <i class="bx bx-chevron-right"></i
+                  ></a>
+                </div> -->
+              </div>
+            </div>
+            <div class="col-lg-8 d-flex align-items-stretch">
+              <div class="icon-boxes d-flex flex-column justify-content-center">
+                <div class="row">
+                  <div
+                    class="col-xl-6 d-flex align-items-stretch"
+                    data-aos="zoom-in"
+                    data-aos-delay="100"
+                  >
+                    <div class="icon-box mt-4 mt-xl-0">
+                      <i class="bx bx-star"></i>
+                      <h4>Nexus</h4>
+                      <p>
+                        To keep yourself in the race for this ever-growing field, you need to keep on learning every day. 
+                        You can find multiple sources to master these languages, from blogs to guides, ebooks to best YouTube channels to learn to program, 
+                        and much more other mediums. Nexus is perfect place for individuals who are nascent to the field
+                        and want to learn the new tools and technologies but are confused how to proceed further.
+                      </p>
+                    </div>
+                  </div>
+                  <div
+                    class="col-xl-6 d-flex align-items-stretch"
+                    data-aos="zoom-in"
+                    data-aos-delay="200"
+                  >
+                    <div class="icon-box mt-4 mt-xl-0">
+                      <i class="bx bx-network-chart"></i>
+                      <h4>Vision</h4>
+                      <p>
+                        As an evolving field of study at the forefront of technological progress and innovation, 
+                        computer science is a topic with tremendous significance in industry and academia. 
+                        Getting stuck in programming is quite normal for all the developers. If you are ever stuck 
+                        somewhere, we've always got a Vision for you! <br>
+                        "I just feel you." <br>
+                        ~Vision
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- End .content-->
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Why Us Section -->
 
       <!-- ======= Counts Section ======= -->
       <section id="counts" class="counts">
@@ -190,89 +258,11 @@
       </section>
       <!-- End Counts Section -->
 
-      <!-- ======= Why Us Section ======= -->
-      <section id="why-us" class="why-us">
-        <div class="container">
-          <div class="row">
-            <div
-              class="col-lg-3 d-flex align-items-stretch"
-              data-aos="fade-right"
-            >
-              <div class="content">
-                <h3>What happens here?</h3>
-                <p>
-                  Our room is open 24/7 (with short resets of a couple of
-                  minutes once every 40-48 hours). It is mostly unmoderated and
-                  unstructured. The space is your to make it work for you and
-                  your time zone.
-                </p>
-                <div class="text-center">
-                  <a href="/signUp" class="more-btn"
-                    >Sign Up <i class="bx bx-chevron-right"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-9 d-flex align-items-stretch">
-              <div class="icon-boxes d-flex flex-column justify-content-center">
-                <div class="row">
-                  <div
-                    class="col-xl-6 d-flex align-items-stretch"
-                    data-aos="zoom-in"
-                    data-aos-delay="100"
-                  >
-                    <div class="icon-box mt-4 mt-xl-0">
-                      <i class="bx bx-receipt"></i>
-                      <h4>Make Time to Plan</h4>
-                      <p>
-                        We know that a ‘virtual’ retreat comes with
-                        distractions. Perhaps for this event you will find a
-                        different place to work, rearrange your desk or put up a
-                        sign Wanda Retreat’. Change your email auto
-                        response you are ‘out of the office’. Make a contract
-                        with yourself and with us to plan when you will and when
-                        you will not access the internet. To plan to succeed you
-                        need a plan. It doesn’t matter if you really know what
-                        is achievable or how this will work. Learning these
-                        things is all part of the experience. Sharing goals is
-                        important
-                      </p>
-                    </div>
-                  </div>
-                  <div
-                    class="col-xl-6 d-flex align-items-stretch"
-                    data-aos="zoom-in"
-                    data-aos-delay="200"
-                  >
-                    <div class="icon-box mt-4 mt-xl-0">
-                      <i class="bx bx-cube-alt"></i>
-                      <h4>Follow a schedule</h4>
-                      <p>
-                        Ensure that you have times allotted in your day when you
-                        can work. Even if you are only going to enter the portal
-                        for one hour a day – maximise your work in that time.
-                        Sitting for four hours at your desk while surfing the
-                        net does not constitute work. Be clear on your goals –
-                        tell others in the portal what you aim to achieve;
-                        report back on what challenges you faced and how you
-                        overcame them.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End .content-->
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Why Us Section -->
-
       <!-- ======= Cta Section ======= -->
       <section id="cta" class="cta">
         <div class="container">
           <div class="text-center" data-aos="zoom-in">
-            <h3>Pssssssttttttt</h3>
+            <h3>You can have everything under control now!</h3>
             <p>You are just one click away from achieving your goals</p>
             <a class="cta-btn" href="/signUp">Get Started</a>
           </div>
@@ -602,7 +592,7 @@
                     <div class="member-info">
                       <h4>Vidhi Mody</h4>
                       <span>Software Developer</span>
-                      <p>A curious person who enjoys figuring out the building blocks of the world and re-arranging them to build something better.</p>
+                      <p>Coding? I do it for the cookies!</p>
                       <div class="social">
                         <a href="https://twitter.com/vidhi_mody"><i class="ri-twitter-fill"></i></a>
                         <a href="https://www.linkedin.com/in/vidhi-m"> <i class="ri-linkedin-box-fill"></i> </a>
