Created Resources guide

--- a/views/nexus.ejs
+++ b/views/nexus.ejs
@@ -1,18 +1,4 @@
-<!--
-=========================================================
-* Argon Dashboard - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
 
-
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-
-
-
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html>
 
@@ -25,17 +11,17 @@
   <!-- Favicon -->
   <link rel="icon" href="/assets/img/brand/favicon.png" type="image/png">
   <!-- Fonts -->
-  <link rel="stylesheet" href="/https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
   <!-- Icons -->
   <link rel="stylesheet" href="/assets/vendor/nucleo/css/nucleo.css" type="text/css">
   <link rel="stylesheet" href="/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
   <!-- Page plugins -->
   <!-- Argon CSS -->
   <link rel="stylesheet" href="/assets/css/argon.css?v=1.2.0" type="text/css">
+  <link rel="stylesheet" href="assets/css/custom.css">
   <style>
-    html{
-  
-  overflow-x: hidden;
+    body{
+      overflow-y: visible !important;
     }
   </style>
 </head>
@@ -62,25 +48,25 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/nexus">
-                <i class="ni ni-atom text-primary"></i>
-                <span class="nav-link-text">Nexus Resources</span>
-              </a>
-            </li>
+                <a class="nav-link active" href="/users/nexus">
+                  <i class="ni ni-atom text-primary"></i>
+                  <span class="nav-link-text">Nexus Resources</span>
+                </a>
+              </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/users/upload">
+              <a class="nav-link" href="/users/upload">
                 <i class="ni ni-spaceship text-pink"></i>
                 <span class="nav-link-text">Upload</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/profile/<%- user._id %>">
+              <a class="nav-link" href="/users/profile/<%= user._id %>">
                 <i class="ni ni-single-02 text-yellow"></i>
                 <span class="nav-link-text">Profile</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/users/settings">
+              <a class="nav-link" href="/users/settings">
                 <i class="ni ni-settings text-default"></i>
                 <span class="nav-link-text">Settings</span>
               </a>
@@ -91,10 +77,10 @@
                 <span class="nav-link-text">Logout</span>
               </a>
             </li>
-            
+
           </ul>
           <!-- Divider -->
-          
+
         </div>
       </div>
     </div>
@@ -107,7 +93,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Search form -->
        <center>
-          <marque class="mb-0 text-sm  font-weight-bold" style="color: white;"><i>"Push yourself because no one else is going to do it for you. One of these 5 a.m's is going to make you a legand"</i></marque>
+          <marque class="mb-0 text-sm  font-weight-bold" style="color: white;"><i>"Push yourself because no one else is going to do it for you. One of these 5 a.m's is going to make you a legend"</i></marque>
         </center>
           <!-- Navbar links -->
           <ul class="navbar-nav align-items-center  ml-md-auto ">
@@ -121,14 +107,15 @@
                 </div>
               </div>
             </li>
-          
+
           <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
             <li class="nav-item dropdown">
               <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="media align-items-center">
-                 
+
                   <div class="media-body  ml-2  d-none d-lg-block">
-                    <i class="ni ni-circle-08" style="font-size: medium;"></i>
+
+
                     <span class="mb-0 text-sm  font-weight-bold"><%= user.name %></span>
                   </div>
                 </div>
@@ -161,54 +148,48 @@
         </div>
       </div>
     </nav>
+
     <!-- Header -->
-    <!-- Header -->
-    <div class="header  pb-12">
+    <div class="header pb-12">
       <div class="container-fluid">
         <br>
-        <br>
-        <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; "><i>"When you dream of conquering the world and you fill your agenda with daunting projects, it’s often necessary to equip yourself with a large mug of coffee and with the right people. Any successful project, be it big or small, has one thing at its core: effective collaboration, and you can achieve it with knowledge sharing."</i></h3>
-        <p>
-          1. Share valid resources <br>
-          2. Links should be specific to the topic <br>
-          3. Avoid using Shortforms <br>
-          4. Keep the title as accurate as possible <br>
-      </p>
-        <form action="/users/upload" method="POST">
-          <div class="row">
-    <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Title</label>
-      <input type="text" name="title" id="title" class="form-control" placeholder="Eg. Getting Started with React">
-    </input>
+        <div class="row">
+            <% for (let i = posts.length -1 ; i>=0 ; i--){ %>
+                <div class= "col-md-4">
+                <div class=" card" style="width: 100%;" >
+                 
+                  <div class="card-body"   style="width: 100%;" >
+                    <h1 class="card-title"><%- posts[i].title %></h1>
+                    <p style="margin-bottom: 1px;  margin-top: 10px; font-size: 21px;">Books</p>
+                    <% for (let j = 0 ; j< posts[i].books.length ; j++){ %>
+                    <span style="font-family: 'Courier New', Courier, monospace; font-size: 17px;" class="card-text"><%- posts[i].books[j] %> </span>
+                    <% } %>
+                    <br>
+                    <p style="margin-bottom: 1px; margin-top: 10px; font-size: 21px;">Blogs</p>
+                    <% for (let j = 0 ; j< posts[i].blogs.length ; j++){ %>
+                      <a href="<%- posts[i].blogs[j]%>" class="btn btn-outline-dark">Blog <%- j+1 %></a>
+                    <% } %>
+                    <br>
+                    <p style="margin-bottom: 1px; margin-top: 10px; font-size: 21px;">Videos</p>
+                    <% for (let j = 0 ; j< posts[i].blogs.length ; j++){ %>
+                      <a href="<%- posts[i].videos[j]%>" class="btn btn-outline-info">Video <%- j+1 %></a>
+                    <% } %>
+                    
+                    <hr>
+                    <p style="margin-bottom: 1px;">By <a href="/users/profile/<%- posts[i].userid %>"><%- posts[i].name %></a></p>
+                  </div>
+                  
+                </div>
+            </div>
+                <% } %>
+
+        </div>
     </div>
-    <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Books</label>
-      <textarea name="books" id="books" class="form-control" placeholder="The Road to React, React in Action (Seperate multiple books with commas)"></textarea>
-    </div>
-    <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Blogs</label>
-      <textarea name="blogs" id="blogs" class="form-control" placeholder="https://www.sanity.io/guides/build-your-first-blog-using-react (Seperate multiple blogs with commas)"></textarea>
-    </div>
-    <div class="form-group col-md-12">
-      <label for="example-text-input" class="form-control-label" rows="5">Videos</label>
-      <textarea name="videos" id="videos" class="form-control" placeholder="https://www.youtube.com/watch?v=pCA4qpQDZD8 (Seperate multiple videos with commas)"></textarea>
-    </div>
-  <div class="form-group col-md-12">
-    <center>
-      <input class="form-control" type="hidden"  name="name" id="name"  value = "<%= user.name %>" required />
-      <input class="form-control" type="hidden"  name="userid" id="userid"  value = "<%= user._id %>" required />
-    <button class="btn btn-icon btn-primary" type="submit">
-      <span class="btn-inner--icon"><i class="ni ni-favourite-28"></i>&nbsp Submit</span>
-    </button>
-  </center>
-</div>
-</form>
-      </div>
     </div>
 
       <!-- Footer -->
       <footer class="footer pt-0">
-        <div class="row align-items-center justify-content-lg-between">
+        <div class="row mx-0 align-items-center justify-content-lg-between">
           <div class="col-lg-6">
             <div class="copyright text-center  text-lg-left  text-muted">
               &nbsp  &copy; 2020 <a href="/" class="font-weight-bold ml-1" target="_blank">Wanda</a>
@@ -216,32 +197,31 @@
           </div>
           <div class="col-lg-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-             
+
               <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">Terms & Conditions</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">Privacy Policy &nbsp</a>
               </li>
-              
+
             </ul>
           </div>
         </div>
       </footer>
     </div>
-  </div>
   <!-- Argon Scripts -->
   <!-- Core -->
-  <script src="/assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
   <script src="/assets/vendor/js-cookie/js.cookie.js"></script>
   <script src="/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-  <script src="/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
   <!-- Optional JS -->
-  <script src="/assets/vendor/chart.js/dist/Chart.min.js"></script>
-  <script src="/assets/vendor/chart.js/dist/Chart.extension.js"></script>
+  <script src="/assets/vendor/nouislider/distribute/nouislider.min.js"></script>
+  <script src="/assets/js/landing.js"></script>
   <!-- Argon JS -->
-  <script src="/assets/js/argon.js?v=1.2.0"></script>
+  <script src="/assets/js/argon.min.js?v=1.2.0"></script>
 </body>
 
 </html>
