--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,18 +1,4 @@
-<!--
-=========================================================
-* Argon Dashboard - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
 
-
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-
-
-
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html>
 
@@ -59,6 +45,12 @@
               <a class="nav-link active" href="/users">
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Connect</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/nexus">
+                <i class="ni ni-atom text-primary"></i>
+                <span class="nav-link-text">Nexus Resources</span>
               </a>
             </li>
             <li class="nav-item">
