--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -80,6 +80,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/users/nexus">
+                <i class="ni ni-atom text-primary"></i>
+                <span class="nav-link-text">Nexus Resources</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/users/upload">
                 <i class="ni ni-spaceship text-pink"></i>
                 <span class="nav-link-text">Upload</span>
